Corrección de documentación
Se completa el docs de optimizador_hiperparametros

--- a/optimizacion_hiperparametros.ipynb
+++ b/optimizacion_hiperparametros.ipynb
@@ -71,60 +71,80 @@
     "def optimizador_hiperparametros(nombre, config, X_train, y_train, X_val, y_val, nombre_dataset, metrica,\n",
     "                                busqueda='random', random_state=42, n_iter=20, n_jobs=1):\n",
     "    \"\"\"\n",
-    "    Función para optimiar los hiperparámetros de un modelo dado. Se entrenan varios modelos sobre el conjunto\n",
-    "    entrenamiento y luego se comparan sus métricas sobre el conjunto de validación (no se hace cross\n",
-    "    validation).\n",
-    "    Se tiene opción de paralelizar los entrenamientos.\n",
+    "    Función para optimizar los hiperparámetros de un modelo dado sobre el conjunto\n",
+    "    entrenamiento. La evaluación para decidir el mejor modelo se realiza sobre el conjunto de validación\n",
+    "    (no se hace cross validation). La búsqueda en el espacio dehiperparámetros puede realizarse con random\n",
+    "    search o grid search.\n",
+    "    \n",
+    "    Esta función trabaja con clases de modelos de sklearn, xgboost o similares (deben soportar los métodos\n",
+    "    fit y predict).\n",
+    "    \n",
+    "    Se exporta el mejor modelo obtenido con el nombre en './{nombre}_{nombre_dataset}.joblib'.\n",
+    "    \n",
+    "    La función devuelve el mejor modelo obtenido en la búsqueda realizada, sus hiperparámetros su score\n",
+    "    obtenido.\n",
+    "    \n",
+    "    Se tiene opción de paralelizar los entrenamientos en los núcleos de la CPU.\n",
     "    \n",
     "    Paámetros:\n",
     "    ----------\n",
     "        nombre : str\n",
-    "            nombre con el que se identifica al modelo\n",
+    "            nombre con el que se identifica al modelo. Se utilizará en el nombre de la variables\n",
     "            \n",
     "        config : dict\n",
     "            Diccionario con la configuración del modelo. Debe tener los siguientes pares de clave - valor:\n",
     "                - 'modelo' : Instancia básica del modelo a probar. Debe ser un objeto de sklearn, xgboost o\n",
-    "                    alguna librería afín.\n",
-    "                'params' : diccionario. Sus claves son los hiperparámetros (dados en la documentación de la\n",
-    "                    clase de clasificador / regresor que se utilice) y sus valores corresponden a listas con\n",
-    "                    los rangos o valores a probar.\n",
+    "                alguna librería afín.\n",
+    "                'params' : diccionario. Sus claves son los nombres de los hiperparámetros (dados en la\n",
+    "                documentación de la clase de clasificador / regresor que se utilice) y sus valores\n",
+    "                corresponden a listas con los rangos o valores a ensayar.\n",
     "                    \n",
     "        X_train : pandas.DataFrame\n",
-    "            Dataframe del conjunto entrenamiento (sólo las muestras).\n",
+    "            Dataframe del conjunto entrenamiento (sin variable objetivo).\n",
     "        y_train : pandas.DataFrame | pandas.Serie\n",
     "            Dataframe con los valores de la variable objetivo del conjunto de entrenamiento.\n",
     "        X_val : pandas.DataFrame\n",
-    "            Dataframe con las muestras del conjunto de validación.\n",
+    "            Dataframe con las muestras del conjunto de validación (sin variable objetivo).\n",
     "        y_val : pandas.DataFrame | pandas.Serie\n",
     "            Dataframe con los valores de la variable objetivo del conjunto de validación.\n",
     "            \n",
     "        nombre_dataset : str\n",
-    "            Nombre con el que se identifica al dataset. Se utilizará como sufijo para identificar con qué\n",
-    "            dataset que entrenado el modelo.\n",
+    "            Nombre con el que se identifica al dataset. Se utilizará como sufijo en el nombre final del modelo\n",
+    "            para identificar con qué dataset se entrenó.\n",
     "            \n",
     "        metrica : str\n",
     "            Métrica a utilizar. Consultar opciones válidas en\n",
-    "            https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-string-names.\n",
+    "            https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-string-names. Esta función\n",
+    "            utiliza métricas negativas.\n",
     "            \n",
     "        busqueda : str, default='random'\n",
-    "            La forma en que se optimizarán los hiperparámetros. Opciones:\n",
+    "            La forma en que se realizará la búsqueda de hiperparámetros óptimos en el espacio de\n",
+    "            hiperparámetros. Opciones:\n",
     "                - 'random' : random search\n",
-    "                - 'grid' : grid search\n",
+    "                - 'grid' : grid search.\n",
     "                \n",
     "        random_state : int, default=42\n",
     "            Valor semilla para la elección aleatoria en caso de usar random search.\n",
     "            Se fija para reproducibilidad.\n",
     "            \n",
     "        n_iter : int, default=20\n",
-    "            Cantidad de combinaciones de valores de hiperparámetros a probar en caso de que se use un random\n",
+    "            Cantidad máxima de combinaciones de valores de hiperparámetros a probar en caso de que se use random\n",
     "            search.\n",
     "            \n",
     "        n_jobs : int, default=1\n",
-    "            Cantidad de trabajos a correr en paralelo. Se sugiere que tenga como valor la cantidad de núcleos\n",
-    "            de CPU (no me maten si estoy diciendo chanchadas, así lo entendí).\n",
+    "            Cantidad de trabajos a correr en paralelo.\n",
     "            \n",
     "    Devuelve:\n",
     "    ---------\n",
+    "        best_model : sklearn | xgboost model\n",
+    "            Módelo con hiperparámetros óptimos según búsqueda realizada.\n",
+    "        \n",
+    "        best_params : dict\n",
+    "            Diccionario con pares clave - valor dados por los nombres de los hiperparámetros ingresados en\n",
+    "            config['params'] y sus valores óptimos.\n",
+    "            \n",
+    "        best_score : float\n",
+    "            Score obtenido por el modelo óptimo (valor de la métrica sobre X_test).\n",
     "    \"\"\"\n",
     "    start_time = time.time()\n",
     "    print(f\"🚀 Iniciando entrenamiento para: {nombre}\")\n",
@@ -255,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc53fc2",
+   "id": "a92d7557",
    "metadata": {},
    "source": [
     "### LASSO"
@@ -264,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "012b1251",
+   "id": "d2618b1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e2feac5f",
+   "id": "6975ff3b",
    "metadata": {
     "scrolled": false
    },
@@ -377,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1627628f",
+   "id": "5b4f782a",
    "metadata": {},
    "source": [
     "### Regresión polinomial"
