--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -26,18 +26,16 @@
     "    2. [Tipos de datos y Descripciones Estadísticas de las Variables](#1.B.-Tipos-de-datos-y-Descripci%C3%B3n-Estad%C3%ADstica-de-las-Variables)\n",
     "    3. [Estructura de datos faltantes](#1.C.-Estructura-de-datos-faltantes)\n",
     "    4. [Valores outliers](#1.D.-Valores-outliers)\n",
-    "    5. [Verificación de Existencia de Muestras Repetidas](#1.E-Verificaci%C3%B3n-de-Existencia-de-Muestas-Repetidas)\n",
-    "3. [Preparación de Dataset](#preparacion)\n",
-    "    1. [División de datasets en train, valid y test](#division_dataset)\n",
-    "    2. [Codificación de Variables Categóricas](#encoding)\n",
-    "    3. [Valores Faltantes](#faltantes)\n",
-    "        1. [Creación de versión A de los datasets (sin columna smoking_history)](#datasets_A)\n",
-    "        2. [Creación de versión B de los datasets (imputando columna smoking_history)](#datasets_B)\n",
-    "    4. [Descarte de Columnas: Importancia y Correlación](#descartes_columnas)\n",
-    "    5. [Estandarización y Escaleo](#estandarizacion_y_escaleo)\n",
-    "4. [Modelos de Clasificación](#modelos)\n",
-    "    1. [Ajuste de hiperparámetros de los modelos](#modelos)\n",
-    "5. [Generar la salida para entregar](#entrega)"
+    "    5. [Verificación de Existencia de Muestras Repetidas](#1.E.-Verificaci%C3%B3n-de-Existencia-de-Muestas-Repetidas)\n",
+    "2. [Modelos de Regresión](#2.-Modelos-de-Regresi%C3%B3n)\n",
+    "    1. [Regresión Polinómica](#2.A.-Regresi%C3%B3n-Polin%C3%B3mica)\n",
+    "    2. [Ajuste Polinómico con LASSO](#2.B.-Ajusto-Polin%C3%B3mico-con-LASSO)\n",
+    "    3. [Algoritmos Basados en Árboles de Decisión](#2.C.-Algoritmos-Basados-en-%C3%81rboles-de-Decisi%C3%B3n)\n",
+    "        1. [Random Forest](#2.C.a.-Random-Forest)\n",
+    "        2. [Boosting](#2.C.b.-Boosting)\n",
+    "    4. [Redes Neuronales](#2.D.-Redes-Neuronales)\n",
+    "3. [Métricas](#3.-M%C3%A9tricas)\n",
+    "4. [Selección de Modelo](#4.-Selecci%C3%B3n-de-Modelo)"
    ]
   },
   {
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "dc5802c9",
    "metadata": {},
    "outputs": [
@@ -172,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea4e095a",
+   "id": "76a281f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,8 +222,10 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fdf0f71c",
-   "metadata": {},
+   "id": "df69c516",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2296,7 +2296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13fdbcd8",
+   "id": "1c7c0900",
    "metadata": {},
    "source": [
     "Para la visualización estadística de los datos, vamos a hacerlo dividiendo por train y test. Esto es para verificar que los train sets hayan quedado correctamente escalados o normalizados. Los test sets pueden tener elementos que no estén en el rango de valores de train."
@@ -2305,7 +2305,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ad31ad5d",
+   "id": "6ecdd30b",
    "metadata": {
     "scrolled": true
    },
@@ -6086,10 +6086,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bfa930e",
+   "id": "7f839a60",
    "metadata": {},
    "source": [
-    "### 1.E Verificación de Existencia de Muestas Repetidas\n",
+    "### 1.E. Verificación de Existencia de Muestas Repetidas\n",
     "\n",
     "Verificamos si existen muestras repetidas. Lo hacemos excluyendo la columna de la variable objetivo 'ica'."
    ]
@@ -6097,7 +6097,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7440f39a",
+   "id": "d17011a4",
    "metadata": {
     "scrolled": true
    },
@@ -6122,7 +6122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51cb9171",
+   "id": "75579e97",
    "metadata": {},
    "source": [
     "## 2. Modelos de Regresión\n",
@@ -6132,7 +6132,97 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70223ccd",
+   "id": "148287e8",
+   "metadata": {},
+   "source": [
+    "### 2.A. Regresión Polinómica\n",
+    "\n",
+    "Consiste en ajustar los datos utilizando funciones polinómicas, optimizando mediante la técnica de cuadrados mínimos.\n",
+    "\n",
+    "En scikit-learn se implementa en dos pasos:\n",
+    "- Se transforma cada vector de características de entrada en otro vector formado por monomios de las entradas (con coeficientes 1), de forma $\\vec{x} = (x_1, x_2,.., x_N) \\rightarrow \\vec{\\hat{x}}=(x_1, x_2, ..., x_N, x_1^2. x_1 x_2, ..., x_1 x_N, ..., x_N^n)$, donde los $\\{x_j\\}$ son las variables de entrada, $N$ la cantidad de estas y $n$ el grado que tendrá el polinomio.\n",
+    "- Se realiza un ajuste lineal sobre las componentes del vector $\\hat{x}$, utilizando cuadados mínimos, para aproximar a la función subyacente $f(\\vec{x})$ por $\\hat{f}(\\vec{x}) = a_{0,..,0} + a_{1,0,..,0}x_1 + ... + a_{0,...,0,1}x_N + a_{1,1,0,...,0}x_1 x_2 + ... + a_{0,...,0,n}x_N^n$, donde los coeficientes $\\{a_{m_1, m_2, ..., m_N}\\}$ son los parámetros a optimizar.\n",
+    "\n",
+    "El primer paso se implementa mediante la clase PolynomialFeatures, cuyos hiperparámetros son:\n",
+    "- 'degree': Será el grado del polinomio ($n$ en la explicación anterior)\n",
+    "- 'interaction_only': Indica si considerar sólo los llamados términos de interacción, o sea, si utilizar sólo los monomios que relacionen a más de una variable de entrada (de la forma $x_1 x_2$, $x_2 x_3^2 x_4$, etc.)\n",
+    "- 'include_bias': Si considerar un término independiente en el polinomio (parámetro $a_{0,...,0}$ en la explicación anterior).\n",
+    "\n",
+    "El segundo paso (el del ajuste en sí) se con la clase LinearRegression, cuyos hiperparámetros considerados son:\n",
+    "\n",
+    "- 'positive': Si forzar o no a todos los coeficientes a ser positivos (para realizar ajuste de cuadrados mínimos no-negativo).\n",
+    "\n",
+    "Como ventajas de esta técnica respecto a otros algoritmos destacamos su sencillez en la implementación e interpretación, en particular, muchas veces nos permite interpretar la importancia de algunas variables o de la relación entre ellas. Tiene bajo costo computacional para pocas variables y dimensiones bajos, y es bueno para modelar relaciones no lineales simples.\n",
+    "\n",
+    "En cuanto a sus desventajas, esta técnica puede ser limitada a la hora de aprender estructuras de datos complejas. Para solventar este último problema, siempre puede aumentarse el grado del polinomio con el que ajustar, aunque esto puede llevar a dos inconvenientes: El primero, si el grado del polinomio es muy alto, se corre riesgo de sobreajustar los datos, y en segundo lugar, tiene escalabilidad limitada, pues la aumentación de los datos de entrada requiere uso de mucha memoria RAM para grados altos, limitando considerablemente las posibilidades reales de ensayar modelos más complejos. Además, estos modelos suelen ser malos extrapolando a datos desconocidos y son poco robustos ante ruido y outliers.\n",
+    "\n",
+    "Si bien, por lo indicado arriba, este no parece ser una buena técnica para resolver nuestro problema, será usada como un modelo base para comparar los modelos que siguen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbd5a54a",
+   "metadata": {},
+   "source": [
+    "### 2.B. Ajusto Polinómico con LASSO\n",
+    "\n",
+    "Similar al caso anterior, pero en lugar de realizar un ajuste lineal de los datos aumentados $\\vec{\\hat{x}}=(x_1, x_2, ..., x_N, x_1^2. x_1 x_2, ..., x_1 x_N, ..., x_N^n)$ utilizando cuadrados mínimos, lo hacemos con **LASSO (least absolute shrinkage and selection operator)**. Esta técnica permite ajustar los datos con un conjunto de coeficientes esparsos, es decir, en el que varios de ellos son exactamente cero, lo que equivale a seleccionar las variables que el modelo considere más relevantes. Esto se consigue añadiendo a la función costo utilizada en cuadrados mínimos un término de regularización $L^1$, por lo que la función que se busca minimizar es:\n",
+    "\n",
+    "$$min_{\\vec{w}} \\frac{1}{2n_{samples}}||\\vec{\\hat{x}}\\vec{w}||_{L^2}^2+\\alpha ||\\vec{w}||_{L^1}$$\n",
+    "\n",
+    "Donde:\n",
+    "- $\\vec{w}$ es el vector de coeficientes\n",
+    "- $n_{samples}$ es la cantidad de muestras\n",
+    "- $||\\cdot||_{L^2}$ es la norma $L^2$\n",
+    "- $||\\cdot||_{L^1}$ es la norma $L^1$\n",
+    "- $\\alpha$ es la constante de regularización.\n",
+    "\n",
+    "La implementación se realizará usando la clase PolynomialFeatures (como en el caso anterior, con los mismos hiperparámetros) y la clase Lasso, cuyos hiperparámetros son:\n",
+    "- 'alpha': Constante de regularización\n",
+    "- 'positive': Si forzar o no a los coeficientes a ser positivos\n",
+    "\n",
+    "La ventaja de utilizar LASSO es que permite obtener soluciones con menor cantidad de coeficientes, ayudando a prevenir el overfitting y manteniendo la interpretatividad de la regresión lineal con cuadrados mínimos. Es más robusto ante multicolinealidad y datos ruidosos. Útil para la adquisición comprimida, es decir, para procesar y recuperar datos o señales a partir de pocas mediciones.\n",
+    "\n",
+    "En cuanto a sus desventajes, si bien LASSO es mejor previniendo el overfitting, presenta las mismas que la regresión lineal por cuadrados mínimos asociadas al embedding polinomial del vector de características: la memoria que requiere almacenar dicha información puede ser un impedimento (y lo fue a la hora de realizar este trabajo) a la hora de probar modelos más complejos (polinomios de mayor grado).\n",
+    "\n",
+    "Por último, LASSO es muy sensible a la elección de $\\alpha$: la penalización puede o bien volverse demasiado grande, lo que lleva a la eliminación de muchas variables, o demasiado chica, lo que lo lleva a comportarse como un regresor lineal ordinario."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c73a897",
+   "metadata": {},
+   "source": [
+    "### 2.C. Algoritmos Basados en Árboles de Decisión"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b30252c2",
+   "metadata": {},
+   "source": [
+    "#### 2.C.a. Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8878b3b",
+   "metadata": {},
+   "source": [
+    "#### 2.C.b. Boosting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6113a1ec",
+   "metadata": {},
+   "source": [
+    "### 2.D. Redes Neuronales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c951a087",
    "metadata": {},
    "source": [
     "## 3. Métricas\n",
@@ -6142,19 +6232,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a3dd5e9",
+   "id": "f2be25d7",
    "metadata": {},
    "source": [
     "## 4. Selección de Modelo\n",
     "\n",
     "En esta sección elegiremos el modelo a utilizar para modelar este problema. Para ello:\n",
-    "- Elegiremos los hiperparámetros a optimizar para cada modelo seleccionado en la [sección 2](#2.-Modelos-de-Regresi%C3%B3n) y los rangos o valores que ensayaremos\n",
-    "- Elegiremos los..."
+    "- Entrenaremos un modelo básico mediante una regresión polinomial. Este nos dará una performance mínima que esperamos los siguientes modelos superen.\n",
+    "- Para cada modelo seleccionado en la [sección 2](#2.-Modelos-de-Regresi%C3%B3n) (incluyendo la regresión polinómica mencionada arriba) realizaremos una búsqueda de hiperparámetros óptimos mediante la técnica de random search. Buscaremos entre una cantidad máxima de 20 combinaciones de valores de hiperparámetros para cada modelo. Este procedimiento se realizará para cada uno de los 4 datasets propuestos (A_std, A_scaled, B_std y B_scaled). Se seleccionará para cada modelo la combinación de hiperámetros-dataset con mejor rendimiento encontrada.\n",
+    "- Como se mencionó arriba, el rendimiento será evaluado con la métrica RMSE.\n",
+    "\n",
+    "El código con el que se realizó la búsqueda de hiperparámetros puede consultarse en el notebook 'optimizacion_hiperparametros.ipynb'. Los modelos fueron exportados en archivos .joblib para poder ser reutilizados."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adb578dd",
+   "id": "6f9cd509",
+   "metadata": {},
+   "source": [
+    "A continuación se detallan los valores de los hiperparámetros ensayados para cada modelo:\n",
+    "\n",
+    "- **Regresión polinómica con Cuadrados Mínimos:**\n",
+    "    - degree: 1-2\n",
+    "    - interaction_only: True, False\n",
+    "    - include_bias: True, False\n",
+    "    - positive: True, False\n",
+    "\n",
+    "- **Regresión polinómica con LASSO:**\n",
+    "    - degree: 1-5\n",
+    "    - interaction_only: True, False\n",
+    "    - include_bias: True, False\n",
+    "    - positive: True, False\n",
+    "    - alpha: $10^{-4}$ - $10^{4}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c65efeb2",
+   "metadata": {},
+   "source": [
+    "A continuación se resumen los parámetros óptimos, mejor dataset y el mejor score obtenido para cada modelo, ordenados desde el de mejor al de peor rendimiento:\n",
+    "\n",
+    "| Modelo               | Parámetros óptimos                                                                 | Dataset        | RSME total |\n",
+    "|-----------------------|------------------------------------------------------------------------------------|----------------|------------|\n",
+    "| Regresión polinómica + LASSO | degree: 1<br>interaction_only: True<br>include_bias: True<br>positive: False<br>alpha:0.1 | A estandarizado | 10.3910 |\n",
+    "| <span style=\"color:red\">Regresión polinómica</span> | <span style=\"color:red\">degree: 1<br>interaction_only: True<br>include_bias: True</span><br><span style=\"color:red\">positive: False</span> | <span style=\"color:red\">A estandarizado</span> | <span style=\"color:red\">10.4708</span> |\n",
+    "|                       |                                                                                    |                |            |\n",
+    "|                       |                                                                                    |                |            |\n",
+    "|                       |                                                                                    |                |            |\n",
+    "\n",
+    "<span style=\"color:red\">En rojo</span> el modelo base."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8087746e",
    "metadata": {},
    "source": [
     "## 5. Entrenamiento del Modelo Final"
@@ -6162,10 +6294,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e4dfe64",
+   "id": "77e2e66e",
    "metadata": {},
    "source": [
-    "## 6. Resultados Finales y Conclusiones"
+    "## 6. Utilización de Datos Satelitales para Complementar la Base de Datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "814a5006",
+   "metadata": {},
+   "source": [
+    "## 7. Resultados Finales y Conclusiones"
    ]
   }
  ],
