--- a/TP3/optimizacion_hiperparametros.ipynb
+++ b/TP3/optimizacion_hiperparametros.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2e342167",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,9 @@
     "import time\n",
     "\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import get_scorer"
+    "from sklearn.metrics import get_scorer\n",
+    "from xgboost import XGBRegressor\n",
+    "import numpy as np"
    ]
   },
   {
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "55bbf0f3",
    "metadata": {
     "scrolled": false
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "4db5d96c",
    "metadata": {},
    "outputs": [],
@@ -210,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "56964279",
    "metadata": {},
    "outputs": [],
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9c4d27ff",
    "metadata": {},
    "outputs": [],
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "30640c5e",
    "metadata": {},
    "outputs": [],
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "b0f82c57",
    "metadata": {},
    "outputs": [],
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "b25f001a",
    "metadata": {
     "scrolled": false
@@ -324,8 +326,8 @@
       "🚀 Iniciando entrenamiento para: Regresor_Polinomico\n",
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.4708\n",
-      "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': True, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 3.29 segundos\n",
+      "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': False, 'linreg__positive': False}\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 5.77 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -335,7 +337,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.4708\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': True, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.37 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.67 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -345,7 +347,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.5060\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': False, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.35 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.49 segundos\n",
       "\n",
       "\n",
       "====================\n",
@@ -355,7 +357,7 @@
       "✅ Regresor_Polinomico: búsqueda finalizada.\n",
       "🏆 Mejor score en validación: 10.5060\n",
       "📌 Mejores hiperparámetros: {'poly__degree': np.int64(1), 'poly__interaction_only': True, 'poly__include_bias': True, 'linreg__positive': False}\n",
-      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.31 segundos\n",
+      "⏱️ Tiempo entrenando Regresor_Polinomico: 0.61 segundos\n",
       "\n",
       "\n"
      ]
@@ -604,11 +606,241 @@
     "                                }\n",
     "    print(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b86da4b9",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e89dc8a9",
+   "metadata": {},
+   "source": [
+    "#### Uso con XGBoost (espacio reducido, pruebas rápidas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2ec145a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgboost_reducido_config = {\n",
+    "    \"modelo\": XGBRegressor(\n",
+    "        objective=\"reg:squarederror\",\n",
+    "        random_state=42,\n",
+    "        n_jobs=1,\n",
+    "        verbosity=0\n",
+    "    ),\n",
+    "    \"params\": {\n",
+    "        \"n_estimators\": [100, 200],\n",
+    "        \"max_depth\": [3, 5],\n",
+    "        \"learning_rate\": [0.05, 0.1]\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d59b5985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================\n",
+      "Dataset A_scaled\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: XGBoost\n",
+      "✅ XGBoost: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.8887\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 200, 'max_depth': 3, 'learning_rate': 0.1}\n",
+      "⏱️ Tiempo entrenando XGBoost: 2.00 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset A_std\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: XGBoost\n",
+      "✅ XGBoost: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.8887\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 200, 'max_depth': 3, 'learning_rate': 0.1}\n",
+      "⏱️ Tiempo entrenando XGBoost: 1.68 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset B_scaled\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: XGBoost\n",
+      "✅ XGBoost: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 7.1646\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 200, 'max_depth': 3, 'learning_rate': 0.05}\n",
+      "⏱️ Tiempo entrenando XGBoost: 1.58 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset B_std\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: XGBoost\n",
+      "✅ XGBoost: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 7.1646\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 200, 'max_depth': 3, 'learning_rate': 0.05}\n",
+      "⏱️ Tiempo entrenando XGBoost: 1.54 segundos\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultados = {}\n",
+    "\n",
+    "for set_conjuntos, set_dict in datasets_dict.items():\n",
+    "    print(f'====================\\nDataset {set_conjuntos}\\n====================')\n",
+    "    best_model, best_params, best_score = optimizador_hiperparametros(nombre='XGBoost',\n",
+    "                                                                      config=xgboost_reducido_config,\n",
+    "                                                                      X_train=set_dict['x_train'],\n",
+    "                                                                      y_train=set_dict['y_train'],\n",
+    "                                                                      X_val=set_dict['x_test'],\n",
+    "                                                                      y_val=set_dict['y_test'],\n",
+    "                                                                      nombre_dataset=set_conjuntos,\n",
+    "                                                                      metrica='neg_root_mean_squared_error',\n",
+    "                                                                      busqueda='random',\n",
+    "                                                                      random_state=42,\n",
+    "                                                                      n_iter=20,\n",
+    "                                                                      n_jobs=4)\n",
+    "    resultados[set_conjuntos] = {'mejor_modelo': best_model,\n",
+    "                                 'mejores_params': best_params,\n",
+    "                                 'mejor_score': best_score\n",
+    "                                }\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c556f3ef",
+   "metadata": {},
+   "source": [
+    "#### Uso con XGBoost (espacio completo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4edba13c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "\n",
+    "xgboost_config = {\n",
+    "    \"modelo\": XGBRegressor(\n",
+    "        objective=\"reg:squarederror\",\n",
+    "        random_state=42,\n",
+    "        n_jobs=1,  # el paralelismo lo controla la función externa\n",
+    "        verbosity=0\n",
+    "    ),\n",
+    "    \"params\": {\n",
+    "        \"n_estimators\": [100, 200, 300],\n",
+    "        \"max_depth\": [3, 5, 7, 9],\n",
+    "        \"learning_rate\": [0.01, 0.05, 0.1, 0.2],\n",
+    "        \"subsample\": [0.6, 0.8, 1.0],\n",
+    "        \"colsample_bytree\": [0.6, 0.8, 1.0],\n",
+    "        \"reg_alpha\": [0, 0.1, 1, 10],   # L1 regularization\n",
+    "        \"reg_lambda\": [1, 10, 50]       # L2 regularization\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2aad9f22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================\n",
+      "Dataset A_scaled\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: XGBoost\n",
+      "✅ XGBoost: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.3140\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 100, 'max_depth': 7, 'learning_rate': 0.1, 'subsample': 0.8, 'colsample_bytree': 1.0, 'reg_alpha': 0.1, 'reg_lambda': 1}\n",
+      "⏱️ Tiempo entrenando XGBoost: 8.61 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset A_std\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: XGBoost\n",
+      "✅ XGBoost: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.3140\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 100, 'max_depth': 7, 'learning_rate': 0.1, 'subsample': 0.8, 'colsample_bytree': 1.0, 'reg_alpha': 0.1, 'reg_lambda': 1}\n",
+      "⏱️ Tiempo entrenando XGBoost: 8.37 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset B_scaled\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: XGBoost\n",
+      "✅ XGBoost: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.3687\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 100, 'max_depth': 5, 'learning_rate': 0.1, 'subsample': 0.8, 'colsample_bytree': 1.0, 'reg_alpha': 0.1, 'reg_lambda': 10}\n",
+      "⏱️ Tiempo entrenando XGBoost: 8.48 segundos\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "Dataset B_std\n",
+      "====================\n",
+      "🚀 Iniciando entrenamiento para: XGBoost\n",
+      "✅ XGBoost: búsqueda finalizada.\n",
+      "🏆 Mejor score en validación: 6.3687\n",
+      "📌 Mejores hiperparámetros: {'n_estimators': 100, 'max_depth': 5, 'learning_rate': 0.1, 'subsample': 0.8, 'colsample_bytree': 1.0, 'reg_alpha': 0.1, 'reg_lambda': 10}\n",
+      "⏱️ Tiempo entrenando XGBoost: 8.52 segundos\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultados = {}\n",
+    "\n",
+    "for set_conjuntos, set_dict in datasets_dict.items():\n",
+    "    print(f'====================\\nDataset {set_conjuntos}\\n====================')\n",
+    "    best_model, best_params, best_score = optimizador_hiperparametros(nombre='XGBoost',\n",
+    "                                                                      config=xgboost_config,\n",
+    "                                                                      X_train=set_dict['x_train'],\n",
+    "                                                                      y_train=set_dict['y_train'],\n",
+    "                                                                      X_val=set_dict['x_test'],\n",
+    "                                                                      y_val=set_dict['y_test'],\n",
+    "                                                                      nombre_dataset=set_conjuntos,\n",
+    "                                                                      metrica='neg_root_mean_squared_error',\n",
+    "                                                                      busqueda='random',\n",
+    "                                                                      random_state=42,\n",
+    "                                                                      n_iter=20,\n",
+    "                                                                      n_jobs=4)\n",
+    "    resultados[set_conjuntos] = {'mejor_modelo': best_model,\n",
+    "                                 'mejores_params': best_params,\n",
+    "                                 'mejor_score': best_score\n",
+    "                                }\n",
+    "    print(\"\\n\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "diplodatos_M07_G02",
    "language": "python",
    "name": "python3"
   },
@@ -622,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
