Se agrega sección XBoost

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -6209,7 +6209,48 @@
    "id": "a8878b3b",
    "metadata": {},
    "source": [
-    "#### 2.C.b. Boosting"
+    "#### 2.C.b. XGBoost (Extreme Gradient Boosting)\n",
+    "\n",
+    "XGBoost es un algoritmo de aprendizaje conjunto basado en la técnica de gradient boosting, que construye un modelo predictivo mediante la combinación secuencial de múltiples modelos débiles (típicamente árboles de decisión). El algoritmo optimiza una función objetivo que incluye tanto el error de predicción como términos de regularización para controlar la complejidad del modelo.\n",
+    "\n",
+    "La implementación se basa en el entrenamiento iterativo de árboles de decisión, donde cada nuevo árbol se entrena para corregir los errores del conjunto de árboles anteriores. En cada iteración $t$, se añade un nuevo árbol $f_t(x)$ al modelo según:\n",
+    "\n",
+    "$$\\hat{y}_i^{(t)} = \\hat{y}_i^{(t-1)} + \\eta f_t(x_i)$$\n",
+    "\n",
+    "donde $\\hat{y}_i^{(t)}$ es la predicción para la muestra $i$ en la iteración $t$, $\\eta$ es la tasa de aprendizaje y $f_t(x_i)$ es la predicción del nuevo árbol para la muestra $i$.\n",
+    "\n",
+    "La función objetivo que XGBoost minimiza está dada por:\n",
+    "\n",
+    "$$\\mathcal{L}^{(t)} = \\sum_{i=1}^{n} l(y_i, \\hat{y}_i^{(t-1)} + f_t(x_i)) + \\Omega(f_t)$$\n",
+    "\n",
+    "donde $l$ es la función de pérdida, $y_i$ es el valor real y $\\Omega(f_t)$ es un término de regularización que controla la complejidad del árbol.\n",
+    "\n",
+    "En scikit-learn, XGBoost se implementa mediante la clase XGBRegressor, cuyos principales hiperparámetros son:\n",
+    "\n",
+    "- 'n_estimators': Número de árboles en el conjunto (iteraciones de boosting)\n",
+    "- 'max_depth': Profundidad máxima de cada árbol individual\n",
+    "- 'learning_rate' (η): Tasa de aprendizaje que controla la contribución de cada árbol\n",
+    "- 'reg_alpha': Parámetro de regularización L1 aplicado a los pesos de las hojas\n",
+    "- 'reg_lambda': Parámetro de regularización L2 aplicado a los pesos de las hojas\n",
+    "- 'subsample': Fracción de muestras utilizadas para entrenar cada árbol\n",
+    "- 'colsample_bytree': Fracción de características utilizadas para entrenar cada árbol\n",
+    "\n",
+    "Como ventajas principales de XGBoost destacamos:\n",
+    "\n",
+    "- Capacidad para modelar relaciones no lineales complejas sin necesidad de transformaciones manuales de características\n",
+    "- Alta eficiencia computacional gracias a optimizaciones como el cálculo paralelo y el manejo inteligente de valores faltantes\n",
+    "- Excelente rendimiento predictivo en una amplia variedad de problemas\n",
+    "- Robustez ante outliers y datos ruidosos\n",
+    "- Incorporación de mecanismos de regularización que ayudan a prevenir el sobreajuste\n",
+    "\n",
+    "En cuanto a sus desventajas:\n",
+    "\n",
+    "- Requiere un ajuste cuidadoso de múltiples hiperparámetros para obtener un rendimiento óptimo, lo que puede hacer el proceso de optimización más complejo y costoso computacionalmente\n",
+    "- El modelo resultante es menos interpretable que los métodos lineales, funcionando como una \"caja negra\" que dificulta entender las relaciones específicas entre variables\n",
+    "- Puede ser propenso al sobreajuste si no se regularizan adecuadamente los hiperparámetros, especialmente con conjuntos de datos pequeños\n",
+    "- Aunque es más eficiente que otros métodos de boosting, sigue teniendo mayor costo computacional que los modelos lineales simples\n",
+    "\n",
+    "A pesar de estas limitaciones, XGBoost es ampliamente reconocido como uno de los algoritmos más efectivos para problemas de regresión y clasificación, siendo frecuentemente utilizado en competencias de ciencia de datos y aplicaciones industriales por su balance entre rendimiento predictivo y eficiencia computacional."
    ]
   },
   {
