Se corrije nombre de carpeta output

--- a/TP3/optimizacion_hiperparametros.ipynb
+++ b/TP3/optimizacion_hiperparametros.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4db5d96c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
     "    print(f\"⏱️ Tiempo entrenando {nombre}: {elapsed:.2f} segundos\")\n",
     "\n",
     "    # Guardar modelo\n",
-    "    dump(best_model, f\"./Models/{nombre}_{nombre_dataset}.joblib\")\n",
+    "    dump(best_model, f\"./models/{nombre}_{nombre_dataset}.joblib\")\n",
     "\n",
     "    return best_model, best_params, best_score"
    ]
