Se agregan secciones redes neuronales y metricas de Mauro

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -6125,6 +6125,7 @@
    "id": "75579e97",
    "metadata": {},
    "source": [
+    "---\n",
     "## 2. Modelos de Regresión\n",
     "\n",
     "En esta sección exploraremos diferentes tipos de modelos de regresión que consideraremos para la solución de este problema. Exploraremos sus hiperparámetros, parámetros, ventajes y desventajas. Elegiremos algunos modelos particulares para modelar el problema planteado."
@@ -6164,6 +6165,7 @@
    "id": "dbd5a54a",
    "metadata": {},
    "source": [
+    "---\n",
     "### 2.B. Ajusto Polinómico con LASSO\n",
     "\n",
     "Similar al caso anterior, pero en lugar de realizar un ajuste lineal de los datos aumentados $\\vec{\\hat{x}}=(x_1, x_2, ..., x_N, x_1^2. x_1 x_2, ..., x_1 x_N, ..., x_N^n)$ utilizando cuadrados mínimos, lo hacemos con **LASSO (least absolute shrinkage and selection operator)**. Esta técnica permite ajustar los datos con un conjunto de coeficientes esparsos, es decir, en el que varios de ellos son exactamente cero, lo que equivale a seleccionar las variables que el modelo considere más relevantes. Esto se consigue añadiendo a la función costo utilizada en cuadrados mínimos un término de regularización $L^1$, por lo que la función que se busca minimizar es:\n",
@@ -6193,6 +6195,7 @@
    "id": "1c73a897",
    "metadata": {},
    "source": [
+    "---\n",
     "### 2.C. Algoritmos Basados en Árboles de Decisión"
    ]
   },
@@ -6258,7 +6261,51 @@
    "id": "6113a1ec",
    "metadata": {},
    "source": [
-    "### 2.D. Redes Neuronales"
+    "---\n",
+    "### 2.D. Redes Neuronales\n",
+    "\n",
+    "Las redes neuronales consisten en modelos de aprendizaje inspirados en el cerebro humano, aprendiendo patrones según una estructura basada en una serie de nodos (neuronas) interconectados en el procesamiento de la información. Mediante un proceso iterativo se procede a reducir el error de las predicciones a través de la modificación de los parámetros que constituyen los algoritmos de la red. Los datos se propagan desde la capa de entrada hacia la de salida y luego los errores se retroalimentan en sentido contrario para el ajuste de los parámetros (pesos).\n",
+    "\n",
+    "##### Arquitectura\n",
+    "\n",
+    "La arquitectura de una red neuronal consta de los siguientes componentes:\n",
+    "\n",
+    "- **Neuronas**: Unidades elementales de procesamiento\n",
+    "- **Pesos y sesgos**: Para ajustar las funciones de activación de cada neurona\n",
+    "- **Capas**: Conjuntos de neuronas que procesan en paralelo la información provista total o parcialmente según el diseño:\n",
+    "  - Capa de entrada\n",
+    "  - Capas ocultas\n",
+    "  - Capa de salida\n",
+    "- **Funciones de activación**: Los algoritmos empleados en el procesamiento de la información efectuado por cada unidad\n",
+    "- **Función de pérdida**: La cual mide los desvíos y se busca optimizar\n",
+    "- **Optimizador**: Función de modificación de los parámetros en base a los desvíos percibidos\n",
+    "\n",
+    "Dada la descripción de los elementos que conforman una red neuronal pueden inferirse cuáles serán los parámetros de diseño (arquitectura). Claramente, las opciones posibles a contemplar son infinitas y se hará selección acotada de posibilidades para contrastar los resultados frente a los restantes métodos en cuestión.\n",
+    "\n",
+    "##### Ventajas y Desventajas\n",
+    "\n",
+    "La aplicación de redes neuronales brinda una serie de ventajas frente a otros métodos:\n",
+    "\n",
+    "- Permite modelar relaciones complejas o no lineales\n",
+    "- Procesa grandes dimensiones de datos\n",
+    "- Reduce la necesidad de asignación manual de características gracias al aprendizaje automático\n",
+    "\n",
+    "Por otra parte, presenta las siguientes desventajas:\n",
+    "\n",
+    "- Requieren grandes volúmenes de datos para brindar resultados satisfactorios\n",
+    "- Requieren altas capacidades computacionales\n",
+    "- Son difíciles de interpretar\n",
+    "- Son sensibles a la configuración de hiperparámetros (número de neuronas, número de capas, etc.)\n",
+    "\n",
+    "##### Implementación\n",
+    "\n",
+    "Para la confección de las redes neuronales a comparar, se empleará la función MLPRegressor, en la cual el tamaño de las capas de entrada y de salida se adaptan a los datos empleados. En nuestro caso:\n",
+    "\n",
+    "- **Capa de entrada**: Tendrá 25 ó 26 neuronas (para los datasets A y B, según el caso)\n",
+    "- **Capa de salida**: Una neurona (predicción del ICA)\n",
+    "- **Función de activación**: Se consideró que la más apropiada para esta aplicación es la del tipo RELU, al promover esparcidad de resultados (devuelve 0 para entradas negativas) y ser computacionalmente más eficiente que otras\n",
+    "- **Optimizador**: Se eligió el del tipo Adam (Adaptive Moment Estimation) debido a su rapidez y adaptabilidad\n",
+    "- **Capas ocultas**: Los tamaños se asignaron combinaciones en forma de \"embudo\" con potencias de 2 descendientes"
    ]
   },
   {
@@ -6266,9 +6313,41 @@
    "id": "c951a087",
    "metadata": {},
    "source": [
+    "---\n",
     "## 3. Métricas\n",
     "\n",
-    "En esta sección exploraremos distintas métricas posibles, ventajas y desventajas y elegiremos cuál se utilizará para resolver el problema planteado"
+    "En esta sección exploraremos distintas métricas posibles, ventajas y desventajas y elegiremos cuál se utilizará para resolver el problema planteado.\n",
+    "\n",
+    "Al tratarse de un problema de regresión, las predicciones erogan valores numéricos a comparar con las etiquetas provistas durante las etapas de entrenamiento y de prueba. Los desvíos percibidos se pueden medir bajo diferentes metodologías aplicando diferentes algoritmos. En este caso se descartarán los métodos relativos, dada la irrelevancia para el análisis de comparar los resultados individuales con la media arrojada. Es decir, es necesario medir los errores respecto a cada etiqueta independientemente.\n",
+    "\n",
+    "Entre los métodos más empleados se encuentran el Error Absoluto Medio, la Mediana del Error Absoluto, el Error Cuadrático Medio y la Raíz del Error Cuadrático Medio. Se procede a describir muy brevemente estas cuatro ampliamente empleadas métricas y a optar por una de ellas a fin de determinar el modelo más eficaz en esta aplicación.\n",
+    "\n",
+    "El error absoluto medio consiste en el cálculo del error absoluto valor a valor, promediado por el número de valores. El algoritmo es el siguiente:\n",
+    "\n",
+    "$$\n",
+    "MAE = \\frac{1}{n}\\sum_{i=1}^{n} \\left| y_i - \\hat{y}_i \\right|\n",
+    "$$\n",
+    "\n",
+    "Se trata de un método más robusto que el Error Cuadrático Medio frente a outliers y tiene la ventaja de interpretarse en las mismas unidades de la variable independiente.\n",
+    "\n",
+    "El segundo método, el de la Mediana del Error Absoluto, es somolar al anterior y provee las mismas ventajas frente a outliers. En el cálculo se dan los conteos de los errores absolutos por valores independientes y se determina sobre ellos la media como resultado.\n",
+    "\n",
+    "$$\n",
+    "MedAE = \\operatorname{median}\\left( \\big| y_i - \\hat{y}_i \\big| \\right), \\quad i = 1, \\dots, n\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "El tercer método, el del Error Cuadrático Medio, consiste en el promedio del error cuadrático de las predicciones frente a las etiquetas. Claramente el signo del error queda automáticamente suprimido gracias a la potencia par en el cálculo:\n",
+    "\n",
+    "$$\n",
+    "MSE = \\frac{1}{n} \\sum_{i=1}^{n} (y_i - \\hat{y}_i)^2\n",
+    "$$\n",
+    "\n",
+    "A diferencia de los métodos anteriores, el Error Cuadrático Medio provee valores de magnitud diferente a las comparadas debido a la potencia. Otra consecuencia del diferente algoritmo es la mayor penalización a desvíos más grandes. Independientemente de ello, puede efectuarse un estudio sobre las distribuciones de los errores más allá de la métrica obtenida en términos globales. Aplicando la raíz cuadrada del Error Cuadrático Medio se obtiene el cuarto método, cuya ventaja sobre el anterior consiste en la provisión de valores comparables con los comparados:\n",
+    "\n",
+    "$$\n",
+    "RMSE = \\sqrt{\\frac{1}{n} \\sum_{i=1}^{n} (y_i - \\hat{y}_i)^2} = \\sqrt{MSE}\n",
+    "$$"
    ]
   },
   {
@@ -6276,6 +6355,7 @@
    "id": "f2be25d7",
    "metadata": {},
    "source": [
+    "---\n",
     "## 4. Selección de Modelo\n",
     "\n",
     "En esta sección elegiremos el modelo a utilizar para modelar este problema. Para ello:\n",
