--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -6408,8 +6408,7 @@
     "| Regresión polinómica + XGBoost | n_estimators: 100<br>max_depth: 7<br>learning_rate: 0.1<br>subsample: 0.8<br>colsample_bytree: 1.0<br>reg_alpha: 0.1<br>reg_lambda: 1 | A estandarizado | 6.3140 |\n",
     "| Regresión polinómica + LASSO | degree: 1<br>interaction_only: True<br>include_bias: True<br>positive: False<br>alpha: 0.1 | A estandarizado | 10.3910 |\n",
     "| <span style=\"color:red\">Regresión polinómica</span> | <span style=\"color:red\">degree: 1<br>interaction_only: True<br>include_bias: True</span><br><span style=\"color:red\">positive: False</span> | <span style=\"color:red\">A estandarizado</span> | <span style=\"color:red\">10.4708</span> |\n",
-    "|                       |                                                                                    |                |            |\n",
-    "|                       |                                                                                    |                |            |\n",
+    "| Red Neuronal | hidden_layer_sizes: (64,)<br>activation: relu<br>solver: adam | A estandarizado | 10.5805 |\n",
     "\n",
     "<span style=\"color:red\">En rojo</span> el modelo base."
    ]
